--- a/application/index/view/common/header.html
+++ b/application/index/view/common/header.html
@@ -43,9 +43,9 @@
                         
                     </div>
                 </li>
-                <li><a href="register.html">注册</a></li>
+                <li><a href="{:url('User/register')}">注册</a></li>
                 <li>|</li>
-                <li><a href="login.html">登录</a></li>
+                <li><a href="{:url('User/login')}">登录</a></li>
             </ul>
         </div>
     </div>
