--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -1,5 +1,5 @@
-{include file="public::header" /}
-{include file="public::nav" /}
+{include file="common::header" /}
+{include file="common::nav" /}
 
     <div class="container">
         <div class="top-container">
@@ -814,4 +814,4 @@
         </div>
     </div>
 
-{include file="public/footer" /}
+{include file="common/footer" /}
