--- a/application/index/view/user/register.html
+++ b/application/index/view/user/register.html
@@ -15,7 +15,7 @@
     <div class="wrapper">
         <div class="head">
             <ul>  
-                <li><a href="index.html"><img src="__STATIC__/index/image/logo.png" alt="logo"></a></li>
+                <li><a href="{:url('Index/index')}"><img src="__STATIC__/index/image/logo.png" alt="logo"></a></li>
                 <li class="divider"></li>
                 <li><a href="index.html"></a></li>
             </ul>
