--- a/application/admin/view/Category/add.html
+++ b/application/admin/view/Category/add.html
@@ -1,5 +1,5 @@
 {include file="common::_meta" /}
-  <link rel="stylesheet" type="text/css" href="__STATIC__/admin/hui/lib/icheck/icheck.css"/>
+  <!-- <link rel="stylesheet" type="text/css" href="__STATIC__/admin/hui/lib/icheck/icheck.css"/> -->
   <title>添加产品分类</title>
 </head>
 <body>
@@ -27,13 +27,6 @@
     </div>
   </form>
 </div>
-<!--_footer 作为公共模版分离出去--> 
-<!-- <script type="text/javascript" src="lib/jquery/1.9.1/jquery.min.js"></script>  -->
-<!-- <script type="text/javascript" src="lib/layer/2.4/layer.js"></script> -->
-<!-- <script type="text/javascript" src="static/h-ui/js/H-ui.js"></script>  -->
-<!-- <script type="text/javascript" src="static/h-ui.admin/js/H-ui.admin.page.js"></script>  -->
-<!--/_footer /作为公共模版分离出去--> 
-
 {include file="common::_footer" /}
 <script type="text/javascript">
 $(function(){
