--- a/application/admin/view/Category/category.html
+++ b/application/admin/view/Category/category.html
@@ -1,7 +1,7 @@
 ﻿{include file="common::_meta" /}
 
 <title>产品分类</title>
-<link rel="stylesheet" href="__STATIC__/admin/hui/lib/zTree/v3/css/zTreeStyle/zTreeStyle.css" type="text/css">
+<link rel="stylesheet" href="__STATIC__/admin/hui/lib/zTree_v3/css/zTreeStyle/zTreeStyle.css" type="text/css">
 </head>
 <body>
 
@@ -28,65 +28,68 @@
 <script type="text/javascript" src="__STATIC__/admin/hui/lib/My97DatePicker/4.8/WdatePicker.js"></script>
 <script type="text/javascript" src="__STATIC__/admin/hui/lib/datatables/1.10.0/jquery.dataTables.min.js"></script>
 <script type="text/javascript" src="__STATIC__/admin/hui/lib/laypage/1.2/laypage.js"></script>
-<script type="text/javascript" src="__STATIC__/admin/hui/lib/zTree/v3/js/jquery.ztree.all-3.5.min.js"></script>
+<script type="text/javascript" src="__STATIC__/admin/hui/lib/zTree_v3/js/jquery.ztree.all.js"></script>
 <script type="text/javascript">
-var setting = {
-	view: {
-		dblClickExpand: false,
-		showLine: false,
-		selectedMulti: false
-	},
-	data: {
-		simpleData: {
-			enable:true,
-			idKey: "id",
-			pIdKey: "pId",
-			rootPId: ""
-		}
-	},
-	callback: {
-		beforeClick: function(treeId, treeNode) {
-			var zTree = $.fn.zTree.getZTreeObj("tree");
-			if (treeNode.isParent) {
-				zTree.expandNode(treeNode);
-				return false;
-			} else {
-				demoIframe.attr("src",treeNode.file + ".html");
-				return true;
+	var setting = {
+		view: {
+			dblClickExpand: false,
+			showLine: false,
+			selectedMulti: false
+		},
+		data: {
+			simpleData: {
+				enable:true,
+				idKey: "id",
+				pIdKey: "pId",
+				rootPId: ""
+			}
+		},
+		callback: {
+			beforeClick: function(treeId, treeNode) {
+				var zTree = $.fn.zTree.getZTreeObj("tree");
+				if (treeNode.isParent) {
+					zTree.expandNode(treeNode);
+					return false;
+				} else {
+					demoIframe.attr("src",treeNode.file + ".html");
+					return true;
+				}
 			}
 		}
+	};
+
+	var zNodes =[
+		{ id:1, pId:0, name:"一级分类", open:true},
+		{ id:11, pId:1, name:"二级分类", open:true},
+		{ id:111, pId:11, name:"三级分类"},
+		{ id:112, pId:11, name:"三级分类"},
+		{ id:113, pId:11, name:"三级分类"},
+		{ id:114, pId:11, name:"三级分类"},
+		{ id:115, pId:11, name:"三级分类"},
+		{ id:12, pId:1, name:"二级分类 1-2"},
+		{ id:121, pId:12, name:"三级分类 1-2-1"},
+		{ id:122, pId:12, name:"三级分类 1-2-2"},
+	];
+
+	var code;
+
+	function showCode(str) {
+		if (!code) code = $("#code");
+		code.empty();
+		code.append("<li>"+str+"</li>");
 	}
-};
 
-var zNodes =[
-	{ id:1, pId:0, name:"一级分类", open:true},
-	{ id:11, pId:1, name:"二级分类"},
-	{ id:111, pId:11, name:"三级分类"},
-	{ id:112, pId:11, name:"三级分类"},
-	{ id:113, pId:11, name:"三级分类"},
-	{ id:114, pId:11, name:"三级分类"},
-	{ id:115, pId:11, name:"三级分类"},
-	{ id:12, pId:1, name:"二级分类 1-2"},
-	{ id:121, pId:12, name:"三级分类 1-2-1"},
-	{ id:122, pId:12, name:"三级分类 1-2-2"},
-];
-
-var code;
-
-function showCode(str) {
-	if (!code) code = $("#code");
-	code.empty();
-	code.append("<li>"+str+"</li>");
-}
-
-$(document).ready(function(){
-	var t = $("#treeDemo");
-	t = $.fn.zTree.init(t, setting, zNodes);
-	demoIframe = $("#testIframe");
-	demoIframe.bind("load", loadReady);
-	var zTree = $.fn.zTree.getZTreeObj("tree");
-	zTree.selectNode(zTree.getNodeByParam("id",'11'));
-});
+	$(document).ready(function(){
+		var t = $("#treeDemo");
+		t = $.fn.zTree.init(t, setting, zNodes);
+		// demoIframe = $("#testIframe");
+		// demoIframe.bind("load", function(){
+		// 	console.log('`loadReady`在没有定义啊？')
+		// });
+		var zTree = $.fn.zTree.getZTreeObj("tree");
+		console.log($.fn.zTree.getZTreeObj("tree"))
+		// zTree.selectNode(zTree.getNodeByParam("id",'11'));
+	});
 </script>
 <!--/请在上方写此页面业务相关的脚本-->
 </body>
