--- a/application/admin/view/Category/add.html
+++ b/application/admin/view/Category/add.html
@@ -1,43 +1,37 @@
-{include file="common::_meta" /}
-  <!-- <link rel="stylesheet" type="text/css" href="__STATIC__/admin/hui/lib/icheck/icheck.css"/> -->
-  <title>添加产品分类</title>
-</head>
+<!--包含头部文件-->
+{include file="common/header" /}
 <body>
-<div class="pd-20">
-  <form action="" method="post" class="form form-horizontal" id="form-user-add">
-    <div class="row cl">
-      <label class="form-label col-xs-4 col-sm-2"><span class="c-red">*</span>分类名称：</label>
-      <div class="formControls col-5">
-        <input type="text" class="input-text" value="" placeholder="" id="user-name" name="product-category-name">
-      </div>
-      <div class="col-5"> </div>
-    </div>
-    <div class="row cl">
-      <label class="form-label col-xs-4 col-sm-2">备注：</label>
-      <div class="formControls col-5">
-        <textarea name="" cols="" rows="" class="textarea"  placeholder="说点什么...最少输入10个字符" datatype="*10-100" dragonfly="true" nullmsg="备注不能为空！" onKeyUp="textarealength(this,100)"></textarea>
-        <p class="textarea-numberbar"><em class="textarea-length">0</em>/100</p>
-      </div>
-      <div class="col-5"> </div>
-    </div>
-    <div class="row cl">
-      <div class="col-9 col-offset-2">
-        <input class="btn btn-primary radius" type="submit" value="&nbsp;&nbsp;提交&nbsp;&nbsp;">
-      </div>
-    </div>
-  </form>
+<div class="page-container">
+	<form class="form form-horizontal form-o2o-add" id="form-o2o-add" method="post" action="{:url('Category/save')}">
+		<div class="row cl">
+			<label class="form-label col-xs-4 col-sm-2"><span class="c-red">*</span>生活服务分类名称：</label>
+			<div class="formControls col-xs-8 col-sm-9">
+				<input type="text" class="input-text" value="" placeholder="" id="name" name="name">
+			</div>
+		</div>
+		<div class="row cl">
+			<label class="form-label col-xs-4 col-sm-2"><span class="c-red">*</span>分类栏目：</label>
+			<div class="formControls col-xs-8 col-sm-9">
+				<span class="select-box">
+				<select name="parent_id" class="select">
+					<option value="0">一级分类</option>
+					{volist name="categorys" id="vo"}
+					<option value="">--{$vo.name}</option>
+					{/volist}
+				</select>
+				</span>
+			</div>
+		</div>
+		
+		<div class="row cl">
+			<div class="col-xs-8 col-sm-9 col-xs-offset-4 col-sm-offset-2">
+				<button  type="submit" class="btn btn-primary radius" ><i class="Hui-iconfont">&#xe632;</i> 保存</button>
+				
+				<button onClick="layer_close();" class="btn btn-default radius" type="button">&nbsp;&nbsp;取消&nbsp;&nbsp;</button>
+			</div>
+		</div>
+	</form>
 </div>
-{include file="common::_footer" /}
-<script type="text/javascript">
-$(function(){
-	$('.skin-minimal input').iCheck({
-		checkboxClass: 'icheckbox-blue',
-		radioClass: 'iradio-blue',
-		increaseArea: '20%'
-});
-	
-	
-});
-</script>
-</body>
-</html>
+</div>
+<!--包含头部文件-->
+{include file="common/footer" /}
