--- a/application/admin/view/common/header.html
+++ b/application/admin/view/common/header.html
@@ -9,12 +9,12 @@
 <link rel="Bookmark" href="/favicon.ico" >
 <link rel="Shortcut Icon" href="/favicon.ico" />
 
+<!-- <link rel="stylesheet" type="text/css" href="__STATIC__/admin/hui/lib/icheck-1.x/demo/css/custom.css" /> -->
 {load href="__STATIC__/admin/hui/static/h-ui/css/H-ui.min.css" /}
-<link rel="stylesheet" type="text/css" href="__STATIC__/admin/hui/static/h-ui.admin/css/H-ui.admin.css" />
 <link rel="stylesheet" type="text/css" href="__STATIC__/admin/hui/lib/Hui-iconfont/1.0.8/iconfont.css" />
-<link rel="stylesheet" type="text/css" href="__STATIC__/admin/hui/lib/icheck-1.x/demo/css/custom.css" />
-<link rel="stylesheet" type="text/css" href="__STATIC__/admin/hui/static/h-ui.admin/skin/default/skin.css" id="skin" />
+<link rel="stylesheet" type="text/css" href="__STATIC__/admin/hui/static/h-ui.admin/css/H-ui.admin.css" />
 <link rel="stylesheet" type="text/css" href="__STATIC__/admin/hui/static/h-ui.admin/css/style.css" />
+<link rel="stylesheet" type="text/css" href="__STATIC__/admin/hui/static/h-ui.admin/skin/default/skin.css" id="skin" />
 
 <title>o2o平台</title>
 <meta name="keywords" content="tp5打造o2o平台系统">
