--- a/application/admin/view/common/menu.html
+++ b/application/admin/view/common/menu.html
@@ -2,10 +2,10 @@
 	<input runat="server" id="divScrollValue" type="hidden" value="" />
 	<div class="menu_dropdown bk_2">
 		<dl id="menu-article">
-			<dt><i class="Hui-iconfont">&#xe616;</i> 分类管理<i class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i></dt>
+			<dt><i class="Hui-iconfont">&#xe616;</i> 分类管理 <i class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i></dt>
 			<dd>
 				<ul>
-					<li><a data-href="请添加链接" data-title="生活服务分类" href="javascript:void(0)">生活服务分类</a></li>
+					<li><a data-href="{:url('Category/index')}" data-title="生活服务分类" href="javascript:void(0)">生活服务分类</a></li>
 				</ul>
 			</dd>
 		</dl>
