--- a/application/admin/view/common/header.html
+++ b/application/admin/view/common/header.html
@@ -15,7 +15,7 @@
 <link rel="stylesheet" type="text/css" href="__STATIC__/admin/hui/static/h-ui.admin/css/H-ui.admin.css" />
 <link rel="stylesheet" type="text/css" href="__STATIC__/admin/hui/static/h-ui.admin/css/style.css" />
 <link rel="stylesheet" type="text/css" href="__STATIC__/admin/hui/static/h-ui.admin/skin/default/skin.css" id="skin" />
-
+{load href="__STATIC__/admin/css/common.css" /}
 <title>o2o平台</title>
 <meta name="keywords" content="tp5打造o2o平台系统">
 <meta name="description" content="o2o平台">
