--- a/application/admin/view/Category/index.html
+++ b/application/admin/view/Category/index.html
@@ -26,13 +26,13 @@
 					<td>{$vo.name}</td>
 					<td class="text-c listorder"><input type="number" size="3" attr-id="{$vo.id}" name="listorder" value="{$vo.listorder}"></td>
 					<td>{$vo.create_time}</td>
-					<td class="td-status"><a href="" title="点击修改状态">{$vo.status|status}</a></td>
+					<td class="td-status"><a href="{:url('Category/status', ['id'=>$vo.id, 'status'=>$vo.status==1?0:1])}" title="点击修改状态">{$vo.status|status}</a></td>
 					<td class="td-manage">
 						<a href="{:url('Category/index', ['parent_id'=>$vo.id])}">获取子栏目</a>
 						<a style="text-decoration:none" class="ml-5" onClick="o2o_s_edit('编辑','{:url('Category/edit', ['id'=>$vo.id])}','',300)" href="javascript:;" title="编辑">
 							<i class="Hui-iconfont">&#xe6df;</i>
 						</a>
-						<a style="text-decoration:none" class="ml-5" onClick="o2o_del('','')" href="javascript:;" title="删除">
+						<a style="text-decoration:none" class="ml-5" onClick="o2o_del('{:url('Category/status', ['id'=>$vo.id, 'status'=>-1])}')" href="javascript:;" title="删除">
 							<i class="Hui-iconfont">&#xe6e2;</i>
 						</a>
 					</td>
