--- a/application/admin/view/Category/index.html
+++ b/application/admin/view/Category/index.html
@@ -41,6 +41,7 @@
 			</tbody>
 		</table>
 	</div>
+	<!-- <img style="margin:20px;" width="400" height="400" src="{:url('index/map')}" alt=""> -->
 </div>
 <div class="cl pd-5 bg-1 bk-gray mt-20 tp5-o2o">{$categorys->render()}</div>
 <!--包含头部文件-->
