--- a/application/admin/view/Category/index.html
+++ b/application/admin/view/Category/index.html
@@ -44,7 +44,7 @@
 	<!-- <img style="margin:20px;" width="400" height="400" src="{:url('index/map')}" alt=""> -->
 </div>
 <div class="cl pd-5 bg-1 bk-gray mt-20 tp5-o2o">{$categorys->render()}</div>
-<!--包含头部文件-->
+<!--包含footer文件-->
 {include file="common/footer" /}
 <script>
 	let SCOPE = {
